Client changes cont.

--- a/src/AuthExample/app/elements/routing.html
+++ b/src/AuthExample/app/elements/routing.html
@@ -45,17 +45,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'home';
     });
 
-    page('/users', function() {
-      app.route = 'users';
+    page('/public-route', function() {
+      app.route = 'public-route';
     });
 
-    page('/users/:name', function(data) {
-      app.route = 'user-info';
-      app.params = data.params;
-    });
-
-    page('/contact', function() {
-      app.route = 'contact';
+    page('/private-route', function() {
+      app.route = 'private-route';
     });
 
     // 404
