--- a/src/AuthExample/app/index.html
+++ b/src/AuthExample/app/index.html
@@ -60,7 +60,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
 
-    <auth-model id="authModel" is-authenticated="{{authenticated}}" username="{{username}}"></auth-model>
+    <auth-model id="authModel"
+      client-id="{your-client-id}"
+      domain="{your-domain}"
+      is-authenticated="{{authenticated}}"
+      ></auth-model>
 
     <paper-drawer-panel id="paperDrawerPanel">
       <!-- Drawer Scroll Header Panel -->
@@ -112,8 +116,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
             <section data-route="home">
               <paper-material elevation="1">
-                <paper-button on-tap="login" raised noink hidden$="[[authenticated]]">Log In</paper-button>
-                <paper-button on-tap="logout" raised noink hidden$="[[!authenticated]]">Log Out</paper-button>
+                <paper-button on-tap="debugger" raised noink hidden$="[[authenticated]]">Log In</paper-button>
+                <paper-button on-tap="debugger" raised noink hidden$="[[!authenticated]]">Log Out</paper-button>
                 <paper-button on-tap="getSecretThing" raised noink hidden$="[[!authenticated]]">Get Secret Thing</paper-button>
                 <h3 hidden$="[[!authenticated]]">{{secretThing}}</h3>
                 <paper-button on-tap="getDecodedJwt" raised noink hidden$="[[!authenticated]]">Get Decoded JWT</paper-button>
