Auth0 configuration cont.

--- a/src/AuthExample/app/index.html
+++ b/src/AuthExample/app/index.html
@@ -61,8 +61,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template is="dom-bind" id="app">
 
     <auth-model id="authModel"
-      client-id="{your-client-id}"
-      domain="{your-domain}"
+      client-id="fsXCZuroNA1uKX9uV1AbmPuDUSLkyh6"
+      domain="blazejewicz.eu.auth0.com"
       is-authenticated="{{authenticated}}"
       ></auth-model>
 
