--- a/src/AuthExample/app/elements/auth-model/auth0-js-import.html
+++ b/src/AuthExample/app/elements/auth-model/auth0-js-import.html
@@ -8,4 +8,4 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<script src="//cdn.auth0.com/js/lock-9.0.js"></script>
+<script src="//cdn.auth0.com/js/lock-9.0.min.js"></script>
