Fix login/logout layouts

--- a/src/LayoutRewrite/app/elements/contact-card/contact-card.html
+++ b/src/LayoutRewrite/app/elements/contact-card/contact-card.html
@@ -28,7 +28,7 @@
       :host .contact-info {
         margin: 0 20px;
         padding-bottom: 20px;
-        /*border-bottom: 1px solid #CCC;*/
+        border-bottom: 1px solid #CCC;
         text-align: center;
       }
       :host .contact-info .name {
