Card styling cont.

--- a/src/LayoutRewrite/app/elements/auth-app/auth-app.html
+++ b/src/LayoutRewrite/app/elements/auth-app/auth-app.html
@@ -14,7 +14,7 @@
       .login-actions {
         @apply(--layout-horizontal);
         @apply(--layout-end-justified);
-        padding: 0.5em 0.8em;
+        padding: 0.5em 14px;
       }
       .login-actions paper-button {
         @apply(--layout-self-end);
