--- a/src/LayoutRewrite/app/elements/auth-app/auth-app.html
+++ b/src/LayoutRewrite/app/elements/auth-app/auth-app.html
@@ -120,7 +120,7 @@
         ready: function() {
           this.async(function() {
             if(!this.route.path) {
-              this.set('route.path', '/');
+              this.set('route.path', '/home');
             }
           });
         }
