Refactor user avatar impl details

--- a/src/LayoutRewrite/app/elements/auth-app/auth-app.html
+++ b/src/LayoutRewrite/app/elements/auth-app/auth-app.html
@@ -106,8 +106,9 @@
         attached: function() {
           this.async(function() {
             this.user = {
-              "name": "Peter Grzegorz Blazejewicz",
-              "email": "email@example.com"
+              name: 'Peter Grzegorz Blazejewicz',
+              email: 'email@example.com',
+              avatar: '//app-layout-assets.appspot.com/assets/pesto/avatar.jpg'
             }
           });
         },
