--- a/src/LayoutRewrite/app/elements/contact-card/contact-card.html
+++ b/src/LayoutRewrite/app/elements/contact-card/contact-card.html
@@ -6,6 +6,7 @@
       :host {
         display: block;
         @apply(--layout-vertical);
+        --contact-card-avatar-url: url('https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg');
       }
 
       :host .avatar-container {
@@ -20,7 +21,8 @@
       }
 
       :host .avatar-container .image {
-        background-image: url('//app-layout-assets.appspot.com/assets/pesto/avatar.jpg');
+
+        background-image: var(--contact-card-avatar-url);
         background-size: contain;
         border-radius: 50%;
         @apply(--layout-self-stretch);
@@ -45,7 +47,7 @@
         margin: 0.5em 0;
       }
     </style>
-    <div class="avatar-container">
+    <div class="avatar-container" hidden$="{{!user.avatar}}">
       <div class="image"></div>
     </div>
     <div class="contact-info">
@@ -63,7 +65,17 @@
         properties: {
           user: {
             type: Object,
-            notify: true
+            notify: true,
+            observer: '_userChanged'
+          }
+        },
+        _userChanged: function(newValue, oldValue) {
+          if(newValue) this._updateAvatar();
+        },
+        _updateAvatar: function() {
+          if(this.user) {
+            this.customStyle['--contact-card-avatar-url'] = 'url(\'' + this.user.avatar + '\')';
+            this.updateStyles();
           }
         }
       });
