--- a/src/LayoutRewrite/app/elements/elements.html
+++ b/src/LayoutRewrite/app/elements/elements.html
@@ -35,3 +35,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="auth-app/auth-app.html">
+<link rel="import" href="home-page/home-page.html">
+<link rel="import" href="private-page/private-page.html">
+<link rel="import" href="public-page/public-page.html">
