--- a/src/LayoutRewrite/app/elements/elements.html
+++ b/src/LayoutRewrite/app/elements/elements.html
@@ -38,3 +38,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="home-page/home-page.html">
 <link rel="import" href="private-page/private-page.html">
 <link rel="import" href="public-page/public-page.html">
+<link rel="import" href="not-found-page/not-found-page.html">
